--- a/views/bookings/add.ejs
+++ b/views/bookings/add.ejs
@@ -3,21 +3,23 @@
     <br>
     <br>
     <% if (success.length > 0) { %>
-        <div class="alert-success">
-            <%= success %> 
-        </div>
-    <% } %> 
+    <div class="alert-success">
+        <%= success %>
+    </div>
+    <% } %>
     <form method="post">
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <br>
-        <label for="phone">
-            Phone Number: 
-        </label>
-        <input type="phone" name="phone_number" id="phone">
-        <br>
-        <label for="">
-           Booking Date: <input type="date" name="booking_date" id="">
-        </label><br>
+        <div class="form-group">
+            <label for="phone">Phone Number: </label>
+            <input type="phone" name="phone_number" id="phone" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label for=""> Booking Date:</label>
+            <input type="date" name="booking_date" id="" class="form-control">
+        </div>
+
         <button type="submit" class="btn">Book</button>
     </form>
 </section>
