Added style to Forms

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ body {
     color: #131212;
     font-size: 14px;
     font-family: open sans, Helvetica, Arial, sans-serif;
-    line-height: 1.7;
+    background-color: rgba(82, 79, 79, 0.883);
 }
 
 
@@ -19,9 +19,6 @@ body {
     font-size: 3rem;
     font-weight: 600;
     font-family: 'Dancing Script', cursive;
-
-    /* font-family: 'Source Sans 3',
-    sans-serif; */
 }
 
 .navbar-nav .nav-link {
@@ -46,7 +43,7 @@ body {
 
 .home-image {
     position: absolute;
-    top:0;
+    top: 0;
     z-index: -1;
     opacity: 0;
     transition: opacity 0.9s ease;
@@ -58,17 +55,31 @@ body {
     transition: width .2s ease;
 }
 
+.title {
+    color: rgb(212, 126, 86);
+    margin: 15em 0 5em 0;
+    font-family: 'Source Sans 3', sans-serif;
+    font-weight:bold;
+}
 
 .section1 {
-    width: 100%;
-    padding: 15em 2em;
-    margin: auto;
+    background-image: url("../images/pattern2.jpg");
+    background-size: auto;
+    width: 30%;
+    height: 70vh;
+    padding: 8em 2em;
+    margin: 0 auto;
+    color: #fff;
+    font-family: 'Source Sans 3', sans-serif;
+    font-weight: 700;
+    font-size: 1.2em;
 }
 
 .bookings {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    padding: 15em 2em;
 }
 
 .section2 {
@@ -77,4 +88,15 @@ body {
     grid-template-rows: auto;
     gap: 3em;
     padding: 0.5em;
+}
+
+.section1 .btn {
+    background-color: transparent;
+    color: #fff;
+    font-weight: 700;
+    font-size: 1.5em;
+    border: 2px solid rgb(212, 126, 86);
+    border-radius: 5px;
+    padding: 0.3em 1.5em;
+    margin: 1em 0 2em 5.5em;
 }
