--- a/views/bookings/index.ejs
+++ b/views/bookings/index.ejs
@@ -1,4 +1,4 @@
-<section class="section1 bookings">
+<section class="bookings">
     <h1>Bookings</h1>
     <strong><a href="/bookings/add" rel="noopener noreferrer">Book an appointment</a></strong>
 </section>
