--- a/views/bookings/add.ejs
+++ b/views/bookings/add.ejs
@@ -1,7 +1,7 @@
+<div class="title text-center">
+    <h1>BOOK A RESERVATION</h1>
+</div>
 <section class="section1">
-    <h1>Book An Appointment</h1>
-    <br>
-    <br>
     <% if (success.length > 0) { %>
     <div class="alert-success">
         <%= success %>
@@ -15,7 +15,7 @@
             <input type="phone" name="phone_number" id="phone" class="form-control">
         </div>
 
-        <div class="form-group">
+        <div class="form-group my-5">
             <label for=""> Booking Date:</label>
             <input type="date" name="booking_date" id="" class="form-control">
         </div>
