--- a/views/slots/add.ejs
+++ b/views/slots/add.ejs
@@ -1,7 +1,7 @@
-<section class="section1">
+<div class="title text-center">
     <h1>Add New Slots</h1>
-    <br>
-    <br>
+</div>
+<section class="section1">
     <form method="post">
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <div class="form-group">
@@ -9,7 +9,7 @@
             <input type="date" name="date" class="form-control" required>
         </div>
 
-        <div class="form-group">
+        <div class="form-group my-5">
             <label for=""> Slot Quantity:</label>
             <input type="number" name="quantity" class="form-control" placeholder="Maximum of 10" required>
         </div>
