--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,13 +1,17 @@
+<div class="title text-center">
+    <h1>LOGIN</h1>
+</div>
 <section class="section1">
     <form action="" method="post">
         <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" class="form-control" placeholder="Enter Username" required>
         </div>
-        <div class="form-group">
+        <div class="form-group my-5">
             <label for="password">Password:</label>
-            <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" required>
+            <input type="password" name="password" id="password" class="form-control" placeholder="Enter password"
+                required>
         </div>
-        <button type="submit" class="btn">Submit</button>
+        <button type="submit" class="btn text-center">Sign In</button>
     </form>
 </section>
