--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ body {
     top: 0;
     z-index: -1;
     opacity: 0;
-    transition: opacity 0.9s ease;
+    transition: opacity 0.9s ease-in-out;
 }
 
 .home-image img {
@@ -65,7 +65,7 @@ body {
 .section1 {
     background-image: url("../images/pattern2.jpg");
     background-size: auto;
-    width: 30%;
+    width: 40%;
     height: 70vh;
     padding: 8em 2em;
     margin: 0 auto;
@@ -97,6 +97,6 @@ body {
     font-size: 1.5em;
     border: 2px solid rgb(212, 126, 86);
     border-radius: 5px;
-    padding: 0.3em 1.5em;
+    padding: 0.3em 5em;
     margin: 1em 0 2em 5.5em;
 }
