--- a/views/bookings/user.ejs
+++ b/views/bookings/user.ejs
@@ -1,24 +1,34 @@
-<section class="section1 bookings">
+<% if(feedback) { %>
+<div class="alert alert-success alert-dismiss section1">
+    <%= feedback %>
+</div>
+<%  } %>
+
+<div class=" bookings text-center">
     <h1>Please enter your name and password</h1>
+</div>
+<section class="section1">
+
     <form action="/bookings/update-user" method="post">
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-        <div>
+        <div class="form-group">
             <label for="name">Name:
-                <input type="text" placeholder="Enter Name" name="name" id="name">
+                <input type="text" placeholder="Enter Name" name="name" id="name" class="form-control">
             </label>
         </div>
-        <div>
+        <div class="form-group">
             <label for="phone_number">Phone Number:
-                <input type="phone" name="phone_number" id="phone_number" value="<%= phone_number %>">
+                <input type="phone" name="phone_number" id="phone_number" value="<%= phone_number %>"
+                    class="form-control">
             </label>
         </div>
-        <div>
+        <div class="form-group">
             <label for="password">Password:</label>
-                <input type="password" placeholder="Enter Password" id="password" name="password">
+            <input type="password" placeholder="Enter Password" id="password" name="password" class="form-control">
             </label>
         </div>
         <div>
-            <button type="submit">Save</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </form>
 </section>
