Updated login form

--- a/views/bookings/add.ejs
+++ b/views/bookings/add.ejs
@@ -20,6 +20,16 @@
             <input type="date" name="booking_date" id="" class="form-control">
         </div>
 
+        <div class="form-group">
+        <label for="services">Services:</label>
+        <select class="form-control" id="services" name="services">
+            <option></option>
+            <option>NAIL</option>
+            <option>SPA</option>
+            <option>SALON</option>
+        </select>
+        </div>
+
         <button type="submit" class="btn">Book</button>
     </form>
 </section>
