--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,7 @@ body {
     background-image: url("../images/pattern2.jpg");
     background-size: auto;
     width: 40%;
-    height: 70vh;
+    min-height: 10vh;
     padding: 8em 2em;
     margin: 0 auto;
     color: #fff;
