--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,15 +3,15 @@
 </div>
 <section class="section1">
     <form action="" method="post">
-        <div class="form-group">
+        <div class="form-group mx-5 my-5">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" class="form-control" placeholder="Enter Username" required>
         </div>
-        <div class="form-group my-5">
+        <div class="form-group my-5 mx-5">
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" class="form-control" placeholder="Enter password"
                 required>
         </div>
-        <button type="submit" class="btn text-center">Sign In</button>
+        <button type="submit" class="btn text-center mt-5">Sign In</button>
     </form>
 </section>
