--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,8 +3,9 @@
 </div>
 <section class="section1">
     <form action="" method="post">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <div class="form-group mx-5 my-5">
-            <label for="username">Username:</label>
+            <label for="username">Phone Number:</label>
             <input type="text" name="username" id="username" class="form-control" placeholder="Enter Username" required>
         </div>
         <div class="form-group my-5 mx-5">
