whitelisted homepage from authentication

--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -14,9 +14,8 @@
 
 <body>
     <header>
-
+        <% if ((typeof isAuthenticated !== 'undefined' && isAuthenticated) || (typeof whiteListed !== 'undefined' && whiteListed)){ %>
         <nav class="navbar fixed-top navbar-expand-lg">
-            <% if (typeof isAuthenticated !== 'undefined' && isAuthenticated){ %>
             <span><a class="navbar-brand mx-5" href="/">Mira's</a></span>
             <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -26,16 +25,18 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto ">
-                    <li class="nav-item mx-4"><a href="/home" class="nav-link">Home</a></li>
+                    <li class="nav-item mx-4"><a href="/" class="nav-link">Home</a></li>
                     <li class="nav-item mx-4"><a href="/bookings" class="nav-link">Bookings</a></li>
                     <li class="nav-item mx-4"><a href="/slots" class="nav-link">Slots</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Log Out</a></li>
+                    <% if(!isAuthenticated) { %>
+                        <li class="nav-item"><a href="/login" class="nav-link">Log In</a></li>
+                   <% } else { %> 
+                    <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
+                    <% } %> 
                 </ul>
             </div>
-            <% } else { %>
-            <li class="nav-item"><a href="/login" class="nav-link">Log In</a></li>
-            <% } %>
         </nav>
+        <% } %>
     </header>
 
     <%- body %>
