--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,8 +3,9 @@
 </div>
 <section class="section1 mt-5">
     <% if(message !== 'undefined') { %>
-       <span><%= message %></span>
+    <span><%= message %></span>
     <% } %>
+    <% if (typeof access === 'undefined' || !access) { %>
     <form action="" method="post">
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <div class="form-group mx-5 my-5">
@@ -19,4 +20,10 @@
         </div>
         <button type="submit" class="btn text-center mt-5">Sign In</button>
     </form>
+    <% } %>
+    <% if(typeof access !== 'undefined' || access) { %>
+        <% if(message !== 'undefined') { %>
+        <span><%= message %></span>
+        <% } %>
+  <%  }%> 
 </section>
