--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -27,7 +27,9 @@
                 <ul class="navbar-nav mx-auto ">
                     <li class="nav-item mx-4"><a href="/" class="nav-link">Home</a></li>
                     <li class="nav-item mx-4"><a href="/bookings" class="nav-link">Bookings</a></li>
-                    <li class="nav-item mx-4"><a href="/slots" class="nav-link">Slots</a></li>
+                    <% if(typeof user !== undefined && user.role !== 'user')  { %>
+                        <li class="nav-item mx-4"><a href="/slots" class="nav-link">Slots</a></li>
+                    <%}%> 
                     <% if(!isAuthenticated) { %>
                         <li class="nav-item"><a href="/login" class="nav-link">Log In</a></li>
                    <% } else { %> 
