--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -1,13 +1,14 @@
 <section class="container-fluid page-section">
     <div class="home-image">
-        <img src="/images/bg2.jpg" alt="spa image">
+        <img src="/images/yukie.webp" alt="spa image">
     </div>
 
     <div class="home-image">
-        <img src="/images/bg3.jpg" alt="salon image">
+        <img src="/images/spa.jpg" alt="salon image">
     </div>
-    <article>
-        <h1>Welcome to Mira Salon. Appointment Only!</h1>
+    <article class="homepage-text text-center mx-3">
+        <h1>MIRAH SALON & SPA ACCRA</h1>
+        <p>We provide Day spa, massage, facial spa, hydrafacial, nail, gel nail design, eyelash
+            extensions and more...</p>
     </article>
-
 </section>
