--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,19 +10,19 @@ body {
     color: #131212;
     font-size: 14px;
     font-family: open sans, Helvetica, Arial, sans-serif;
-    background-color: rgba(82, 79, 79, 0.883);
+    overflow-x: hidden;
 }
 
 
 .navbar .navbar-brand {
-    color: rgb(212, 126, 86);
-    font-size: 3rem;
+    color: #fff;
+    font-size: 2.2rem;
     font-weight: 600;
     font-family: 'Dancing Script', cursive;
 }
 
 .navbar-nav .nav-link {
-    color: rgb(47, 47, 47);
+    color: #fff;
     font-size: 1.5em;
     font-weight: 600;
     font-family: 'Source Sans 3', sans-serif;
@@ -30,13 +30,12 @@ body {
 
 .navbar-nav .nav-link:hover {
     color: rgb(212, 126, 86);
-    text-decoration: underline rgb(83, 83, 83);
+    text-decoration: underline #fff;
     text-underline-position: under;
     transition: text-underline-position .2s ease;
 }
 
 .page-section {
-    height: 80vh;
     position: relative;
     margin: auto;
 }
@@ -46,7 +45,8 @@ body {
     top: 0;
     z-index: -1;
     opacity: 0;
-    transition: opacity 0.9s ease-in-out;
+    transition: position 0.7s ease-in-out;
+    width: 100%;
 }
 
 .home-image img {
@@ -57,7 +57,7 @@ body {
 
 .title {
     color: rgb(212, 126, 86);
-    margin:  0 5em ;
+    margin: 0 5em;
     font-family: 'Source Sans 3', sans-serif;
     font-weight: bold;
 }
@@ -103,4 +103,39 @@ body {
     border-radius: 5px;
     padding: 0.3em 7em;
     margin: 1em 0 2em 3.5em;
+}
+
+.homepage-text {
+    position: relative;
+    top: 11em;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2em;
+    font-weight: 800;
+    line-height: 2em;
+    animation: tracking-in-contract-bck-bottom 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+.homepage-text p {
+    color: #fff;
+    font-size: 0.55em;
+    font-weight: 400;
+    line-height: 3em;
+}
+
+@keyframes tracking-in-contract-bck-bottom {
+    0% {
+        letter-spacing: 1em;
+        transform: translateZ(400px) translateY(300px);
+        opacity: 0;
+    }
+
+    40% {
+        opacity: 0.6;
+    }
+
+    100% {
+        transform: translateZ(0) translateY(0);
+        opacity: 1;
+    }
 }
