Installed and mounted bcrypt

--- a/views/bookings/add.ejs
+++ b/views/bookings/add.ejs
@@ -1,7 +1,7 @@
 <div class="title text-center">
     <h1>BOOK A RESERVATION</h1>
 </div>
-<section class="section1">
+<section class="section1 mt-5">
     <% if (success.length > 0) { %>
     <div class="alert-success">
         <%= success %>
