--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto:ital,wght@0,100;0,300;1,300&family=Source+Sans+3:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
 
 * {
     padding: 0;
@@ -18,7 +19,7 @@ body {
     color: #fff;
     font-size: 2.2rem;
     font-weight: 600;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Noto Serif',serif;
 }
 
 .navbar-nav .nav-link {
@@ -45,7 +46,7 @@ body {
     top: 0;
     z-index: -1;
     opacity: 0;
-    transition: position 0.7s ease-in-out;
+    /* transition: position 0.7s ease-in-out; */
     width: 100%;
 }
 
