--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -1,4 +1,4 @@
-<section class="container-fluid page-section">
+<section class="page-section">
     <div class="home-image">
         <img src="/images/yukie.webp" alt="spa image">
     </div>
