--- a/views/layout/500_page.ejs
+++ b/views/layout/500_page.ejs
@@ -1,4 +1,4 @@
-<section class="section1">
+<section>
     <div>
         <% if(error != null)  { %>
             <h1><span>Oops! </span><%= error %> </h1>
