--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -1,14 +1,17 @@
-<section class="page-section">
-    <div class="home-image">
-        <img src="/images/yukie.webp" alt="spa image">
-    </div>
-
-    <div class="home-image">
-        <img src="/images/spa.jpg" alt="salon image">
-    </div>
+<section class="page-section">    
     <article class="homepage-text text-center mx-3">
         <h1>MIRAH SALON & SPA ACCRA</h1>
         <p>We provide Day spa, massage, facial spa, hydrafacial, nail, gel nail design, eyelash
             extensions and more...</p>
     </article>
+    <div id="carouselExampleSlidesOnly" class="carousel slide home-image" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="/images/yukie.webp" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="/images/spa.jpg" alt="Second slide">
+            </div>
+        </div>
+    </div>
 </section>
