--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <header>                      
         <% if ((typeof isAuthenticated !== 'undefined' && isAuthenticated) || (typeof whiteListed !== 'undefined' && whiteListed)){ %>
         <nav class="navbar fixed-top navbar-expand-lg">
             <span><a class="navbar-brand mx-5" href="/">MIRAH'S</a></span>
@@ -25,9 +25,12 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto ">
+
                     <% if(typeof navigations !== undefined)  { %>
                         <% navigations.forEach(nav => { %>
-                            <li class="nav-item mx-4"><a href="<%= nav.url %>" class="nav-link"><%= nav.name %></a></li>
+                             
+                            <li class="nav-item <%= currentPage == nav.name ? 'active' : '' %> mx-4"><a href="<%= nav.url %>"
+                                    class="nav-link"><%= nav.name %><span class="sr-only">(current)</span></a></li>
                         <% }) %> 
                     <%}%>    
                 </ul>
